--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
-<!-- about.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>基本情報 - 多田 旭志</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -13,13 +13,13 @@
         <nav>
           <a href="index.html">ホーム</a> |
           <a href="strength.html">自己PR</a> |
-          <a href="education.html">学歴</a>
-
+          <a href="education.html">学歴</a> |
+          <a href="reason.html">教員志望理由</a>
         </nav>
       </header>
 
   <main>
-    <section>
+    <section class="pr-section">
       <h2>プロフィール</h2>
       <ul>
         <li><strong>名前：</strong>多田 旭志</li>
@@ -29,6 +29,46 @@
         <li><strong>性別：</strong>男性</li>
         <li><strong>メール：</strong><a href="mailto:terushi@example.com">terushi@example.com</a></li>
       </ul>
+    </section>
+
+    <section class="pr-section">
+        <h2>資格・免許</h2>
+        <table class="license-table">
+            <thead>
+                <tr>
+                    <th>年</th>
+                    <th>月</th>
+                    <th>資格・免許</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2025</td>
+                    <td>4</td>
+                    <td>心理学検定２級　取得</td>
+                </tr>
+                <tr>
+                    <td>2025</td>
+                    <td>10</td>
+                    <td>心理学検定１級　取得見込み</td>
+                </tr>
+                <tr>
+                    <td>2026</td>
+                    <td>2</td>
+                    <td>中学校教諭一種免許状（数学）取得見込み</td>
+                </tr>
+                <tr>
+                    <td>2026</td>
+                    <td>2</td>
+                    <td>高等学校教諭一種免許状（数学）取得見込み</td>
+                </tr>
+                <tr>
+                    <td>2026</td>
+                    <td>2</td>
+                    <td>高等学校教諭一種免許状（情報）取得見込み</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
   </main>
 
