--- a/education.html
+++ b/education.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>学歴 - 多田 旭志</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -12,29 +13,28 @@
     <nav>
       <a href="index.html">ホーム</a> |
       <a href="strength.html">自己PR</a> |
-      <a href="about.html">基本情報</a> 
-     </nav>
+      <a href="about.html">基本情報</a> |
+      <a href="reason.html">教員志望理由</a>
+    </nav>
   </header>
 
   <main>
-    <section>
+    <section class="pr-section">
       <h2>学歴</h2>
-      <table style="width:100%; border-collapse: collapse;">
-        <tbody>
-          <tr><td>2012年4月</td><td>城西川越中学校　入学</td></tr>
-          <tr><td>2015年3月</td><td>城西川越中学校　卒業</td></tr>
-          <tr><td>2015年4月</td><td>城西大学付属川越高等学校　入学</td></tr>
-          <tr><td>2018年3月</td><td>城西大学付属川越高等学校　卒業</td></tr>
-          <tr><td>2018年4月</td><td>会津大学 コンピュータ理工学部　入学</td></tr>
-          <tr><td>2022年3月</td><td>会津大学 コンピュータ理工学部　卒業</td></tr>
-          <tr><td>2022年4月</td><td>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（修士課程） 入学</td></tr>
-          <tr><td>2024年3月</td><td>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（修士課程） 修了</td></tr>
-          <tr><td>2024年4月</td><td>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（博士後期課程） 入学</td></tr>
-        </tbody>
-      </table>
+      <ul class="education-list">
+        <li><span>2012年4月</span>城西川越中学校　入学</li>
+        <li><span>2015年3月</span>城西川越中学校　卒業</li>
+        <li><span>2015年4月</span>城西大学付属川越高等学校　入学</li>
+        <li><span>2018年3月</span>城西大学付属川越高等学校　卒業</li>
+        <li><span>2018年4月</span>会津大学 コンピュータ理工学部　入学</li>
+        <li><span>2022年3月</span>会津大学 コンピュータ理工学部　卒業</li>
+        <li><span>2022年4月</span>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（修士課程） 入学</li>
+        <li><span>2024年3月</span>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（修士課程） 修了</li>
+        <li><span>2024年4月</span>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（博士後期課程） 入学</li>
+      </ul>
     </section>
   </main>
-
+  
   <footer>
     <p>&copy; 2025 Terushi Tada</p>
   </footer>
