--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>多田 旭志のホームページ</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +13,9 @@
     <nav>
       <a href="strength.html">自己PR</a> |
       <a href="about.html">基本情報</a> |
-      <a href="education.html">学歴</a>
+      <a href="education.html">学歴</a> |
+      <a href="reason.html">教員志望理由</a>
+
     </nav>
   </header>
 
