--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
           <a href="index.html">ホーム</a> |
           <a href="strength.html">自己PR</a> |
           <a href="education.html">学歴</a> |
-          <a href="reason.html">教員志望理由</a>
+          <a href="reason.html">志望理由</a>
         </nav>
       </header>
 
@@ -27,48 +27,19 @@
         <li><strong>所在地：</strong>福島県会津若松市</li>
         <li><strong>出身：</strong>埼玉県川越市</li>
         <li><strong>性別：</strong>男性</li>
-        <li><strong>メール：</strong><a href="mailto:terushi@example.com">terushi@example.com</a></li>
+        <li><strong>メール：</strong><a href="mailto:terushi@example.com">learn5.tada@gmail.com</a></li>
       </ul>
     </section>
 
     <section class="pr-section">
         <h2>資格・免許</h2>
-        <table class="license-table">
-            <thead>
-                <tr>
-                    <th>年</th>
-                    <th>月</th>
-                    <th>資格・免許</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2025</td>
-                    <td>4</td>
-                    <td>心理学検定２級　取得</td>
-                </tr>
-                <tr>
-                    <td>2025</td>
-                    <td>10</td>
-                    <td>心理学検定１級　取得見込み</td>
-                </tr>
-                <tr>
-                    <td>2026</td>
-                    <td>2</td>
-                    <td>中学校教諭一種免許状（数学）取得見込み</td>
-                </tr>
-                <tr>
-                    <td>2026</td>
-                    <td>2</td>
-                    <td>高等学校教諭一種免許状（数学）取得見込み</td>
-                </tr>
-                <tr>
-                    <td>2026</td>
-                    <td>2</td>
-                    <td>高等学校教諭一種免許状（情報）取得見込み</td>
-                </tr>
-            </tbody>
-        </table>
+        <ul class="education-list">
+            <li><span>2025年4月</span>心理学検定２級　取得</li>
+            <li><span>2025年10月</span>心理学検定１級　取得見込み</li>
+            <li><span>2026年2月</span>中学校教諭一種免許状（数学）取得見込み</li>
+            <li><span>2026年2月</span>高等学校教諭一種免許状（数学）取得見込み</li>
+            <li><span>2026年2月</span>高等学校教諭一種免許状（情報）取得見込み</li>
+        </ul>
     </section>
   </main>
 
