--- a/education.html
+++ b/education.html
@@ -14,7 +14,7 @@
       <a href="index.html">ホーム</a> |
       <a href="strength.html">自己PR</a> |
       <a href="about.html">基本情報</a> |
-      <a href="reason.html">教員志望理由</a>
+      <a href="reason.html">志望理由</a>
     </nav>
   </header>
 
