--- a/reason.html
+++ b/reason.html
@@ -21,8 +21,7 @@
     <main>
         <section class="pr-section">
             <h1>教員志望理由</h1> 
-            <img src="image.jpg" alt="教員を目指す理由を表すイメージ" class="main-visual-image">
-            
+            <img src="reason.jpg" alt="教員を目指す理由を表すイメージ" class="main-visual-image">
             <h2>主体的に学び、未来を切り拓く力を育みたい</h2>
             <p>
                 私は現在大学院に在籍しており、指導補助等で後輩学生に接する機会が多くあります。大学は、学生自身が主体的に目的や行動指針を設定し、それに向かって挑戦していくことが求められる場所ですが、多くの学生がこの「自分で目的・行動指針を設定し遂行する力」を十分に持ち合わせていない現状を目の当たりにしています。
@@ -44,7 +43,7 @@
             <p>
                 今度は私が教員として、この素晴らしい環境を未来の後輩たちに繋いでいきたいです。優しく素直な生徒たちの成長を支えることで、母校に恩返しをしたいと考えています。
             </p>
-        </section>
+            </section>
     </main>
 
     <footer>
