--- a/strength.html
+++ b/strength.html
@@ -47,7 +47,7 @@
           <a href="index.html">ホーム</a> |
           <a href="about.html">基本情報</a> |
           <a href="education.html">学歴</a> |
-          <a href="reason.html">教員志望理由</a>
+          <a href="reason.html">志望理由</a>
 
         </nav>
       </header>
