--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@
         <nav>
           <a href="index.html">ホーム</a> |
           <a href="strength.html">自己PR</a> |
-          <a href="education.html">学歴</a> |
           <a href="reason.html">志望理由</a>
         </nav>
       </header>
@@ -24,12 +23,27 @@
       <ul>
         <li><strong>名前：</strong>多田 旭志</li>
         <li><strong>年齢：</strong>25歳</li>
-        <li><strong>所在地：</strong>福島県会津若松市</li>
-        <li><strong>出身：</strong>埼玉県川越市</li>
+        <li><strong>所在地：</strong>福島県会津若松市在住</li>
+        <li><strong>出身：</strong>埼玉県川越市出身</li>
         <li><strong>性別：</strong>男性</li>
         <li><strong>メール：</strong><a href="mailto:terushi@example.com">learn5.tada@gmail.com</a></li>
       </ul>
     </section>
+
+    <section class="pr-section">
+        <h2>学歴</h2>
+        <ul class="education-list">
+          <li><span>2012年4月</span>城西川越中学校　入学</li>
+          <li><span>2015年3月</span>城西川越中学校　卒業</li>
+          <li><span>2015年4月</span>城西大学付属川越高等学校　入学</li>
+          <li><span>2018年3月</span>城西大学付属川越高等学校　卒業</li>
+          <li><span>2018年4月</span>会津大学 コンピュータ理工学部　入学</li>
+          <li><span>2022年3月</span>会津大学 コンピュータ理工学部　卒業</li>
+          <li><span>2022年4月</span>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（修士課程） 入学</li>
+          <li><span>2024年3月</span>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（修士課程） 修了</li>
+          <li><span>2024年4月</span>会津大学大学院 コンピュータ理工学研究科 コンピュータ・情報システム学専攻（博士後期課程） 入学</li>
+        </ul>
+      </section>
 
     <section class="pr-section">
         <h2>資格・免許</h2>
