--- a/reason.html
+++ b/reason.html
@@ -12,15 +12,14 @@
         <h1>多田 旭志のホームページ</h1>
         <nav>
             <a href="index.html">ホーム</a> |
+            <a href="about.html">基本情報</a> 
             <a href="strength.html">自己PR</a> |
-            <a href="about.html">基本情報</a> |
-            <a href="education.html">学歴</a>
         </nav>
     </header>
     
     <main>
         <section class="pr-section">
-            <h1>教員志望理由</h1> 
+            <h1>志望理由</h1> 
             <img src="reason.jpg" alt="教員を目指す理由を表すイメージ" class="main-visual-image">
             <h2>主体的に学び、未来を切り拓く力を育みたい</h2>
             <p>
