--- a/strength.html
+++ b/strength.html
@@ -46,7 +46,6 @@
         <nav>
           <a href="index.html">ホーム</a> |
           <a href="about.html">基本情報</a> |
-          <a href="education.html">学歴</a> |
           <a href="reason.html">志望理由</a>
 
         </nav>
@@ -54,7 +53,7 @@
       
     <main>
         <section class="pr-section">
-            <h1>わたしの強み</h1> 
+            <h1>自己PR</h1> 
             <img src="image.jpg" alt="あなたの強みを表す画像" class="main-visual-image">
             <h2>多様な意見を尊重し、<span class="mobile-break"></span>チームをまとめ、成果創出</h2>
             <p>
