--- a/index.html
+++ b/index.html
@@ -3,54 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>多田 旭志のホームページ</title>
+  <title>多田旭志 | Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
-    <h1>多田 旭志のホームページ</h1>
+    <h1>ただ　てるし</h1>
     <nav>
-      <a href="strength.html">自己PR</a> |
       <a href="about.html">基本情報</a> |
-      <a href="education.html">学歴</a> |
+      <a href="strength.html">自己PR</a> |
       <a href="reason.html">志望理由</a>
     </nav>
   </header>
 
   <main>
     <section class="hero-section">
+      <img src="teruko.png" alt="多田旭志の顔写真" class="profile-photo">
       <div class="hero-text">
         <h1 class="hero-title">主体的に学び、未来を切り拓く力を。</h1>
         <p class="hero-subtitle">こんにちは。情報の教員を目指す、<br><span class="name-highlight">多田 旭志</span>です。</p>
         <p>このポートフォリオサイトでは、私の経歴や教育に対する想いをまとめています。採用をご検討の皆様に、私の人となりをより深く知っていただく一助となれば幸いです。</p>
         
         <a href="resume.pdf" class="hero-button" target="_blank">履歴書 (PDF) を見る</a>
-  
       </div>
     </section>
-
     <section class="contents-grid">
       <div class="content-card">
-        <h2>わたしの強み</h2>
+        <h2>基本情報</h2>
+        <p>福島県在住の25歳です。学歴や、教員免許（数学・情報）などの取得資格についてまとめています。</p>
+        <a href="about.html" class="card-button">詳しく見る</a>
+      </div>
+
+      <div class="content-card">
+        <h2>自己PR</h2>
         <p>多様な意見を尊重し、粘り強くチームをまとめ上げる力を、大学のよさこい部での経験を通じて培いました。</p>
         <a href="strength.html" class="card-button">詳しく見る</a>
       </div>
 
       <div class="content-card">
-        <h2>基本情報・資格</h2>
-        <p>福島県在住の25歳です。教員免許（数学・情報）や心理学検定など、取得（取得見込み）資格を掲載しています。</p>
-        <a href="about.html" class="card-button">詳しく見る</a>
-      </div>
-
-      <div class="content-card">
-        <h2>学歴</h2>
-        <p>城西川越中学校・高等学校を経て、現在は会津大学大学院の博士後期課程に在籍しています。</p>
-        <a href="education.html" class="card-button">詳しく見る</a>
-      </div>
-
-      <div class="content-card">
-        <h2>教員志望理由</h2>
+        <h2>志望理由</h2>
         <p>生徒が自ら道を切り拓く力を育む教育に貢献したいという想い、そして母校・城西川越への恩返しの気持ちを綴りました。</p>
         <a href="reason.html" class="card-button">詳しく見る</a>
       </div>
