--- a/reason.html
+++ b/reason.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>多田 旭志 - 教員志望理由</title>
+    <title>多田 旭志 - 志望理由</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>多田 旭志のホームページ</h1>
+        <h1>ただ　てるし</h1>
         <nav>
             <a href="index.html">ホーム</a> |
-            <a href="about.html">基本情報</a> 
-            <a href="strength.html">自己PR</a> |
+            <a href="about.html">基本情報</a> |
+            <a href="strength.html">自己PR</a> 
         </nav>
     </header>
     
