--- a/strength.html
+++ b/strength.html
@@ -42,7 +42,7 @@
     </script>
 <body>
     <header>
-        <h1>多田 旭志のホームページ</h1>
+        <h1>ただ　てるし</h1>
         <nav>
           <a href="index.html">ホーム</a> |
           <a href="about.html">基本情報</a> |
