--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>基本情報 - 多田 旭志</title>
+  <title>多田 旭志 | 基本情報</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>多田 旭志のホームページ</h1>
+        <h1>ただ　てるし</h1>
         <nav>
           <a href="index.html">ホーム</a> |
           <a href="strength.html">自己PR</a> |
