--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <main>
     <section class="hero-section">
-      <img src="terushi.png" alt="多田旭志の顔写真" class="profile-photo">
+      <img src="terushi.jpg" alt="多田旭志の顔写真" class="profile-photo">
       <div class="hero-text">
         <h1 class="hero-title">主体的に学び、未来を切り拓く力を。</h1>
         <p class="hero-subtitle">こんにちは。情報の教員を目指す、<br><span class="name-highlight">多田 旭志</span>です。</p>
